--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.23.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
