--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.23.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
